Website generation with Couscous

--- a/changelog.html
+++ b/changelog.html
@@ -45,6 +45,11 @@
                                         Introduction
                                     </a>
                                 </li>
+                                                            <li class="">
+                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/02-compatibility.html">
+                                        Compatibility
+                                    </a>
+                                </li>
                                                     </ul>
 
                     </nav>
@@ -52,6 +57,11 @@
                 
                 <section id="content" class="col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10">
                     <h1 id="changelog">CHANGELOG</h1>
+<h2 id="020-supported-bundles">0.2.0: Supported Bundles</h2>
+<ul>
+<li>added support for <code>league/tactician-bundle</code></li>
+<li>added support for <code>symfony/monolog-bundle</code></li>
+</ul>
 <h2 id="010-httpkernel">0.1.0: HttpKernel</h2>
                 </section>
 
