--- a/contributing.html
+++ b/contributing.html
@@ -45,6 +45,11 @@
                                         Introduction
                                     </a>
                                 </li>
+                                                            <li class="">
+                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/02-compatibility.html">
+                                        Compatibility
+                                    </a>
+                                </li>
                                                     </ul>
 
                     </nav>
