--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
                                         Introduction
                                     </a>
                                 </li>
+                                                            <li class="">
+                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/02-compatibility.html">
+                                        Compatibility
+                                    </a>
+                                </li>
                                                     </ul>
 
                     </nav>
@@ -56,13 +61,20 @@
 micro-framework which follows the &quot;add what you need&quot; philosophy.</p>
 <h2 id="installation">Installation</h2>
 <p>First install it using <a href="https://getcomposer.org/download">Composer</a>:</p>
-<pre><code>composer require gnugat/micro-framework-bundle:^0.1</code></pre>
+<pre><code>composer require gnugat/micro-framework-bundle:^0.2</code></pre>
 <p>Then enable it in your application's kernel (e.g. <code>app/AppKernel.php</code>):</p>
 <pre><code>new Gnugat\MicroFrameworkBundle\GnugatMicroFrameworkBundle()</code></pre>
 <h2 id="features">Features</h2>
 <ul>
-<li>compatible with third party bundles</li>
-<li>better performance than FrameworkBundle (faster autoloading, lighter DIC)</li>
+<li>micro framework spirit, including:
+<ul>
+<li>&quot;add what you need&quot; philosohpy</li>
+<li>few dependencies</li>
+<li>small API</li>
+<li>small footprint for better performance</li>
+<li><a href="doc/01-introduction.html">more information</a></li>
+</ul></li>
+<li>compatible with most third party bundles, <a href="doc/02-compatibility.html">more information</a></li>
 </ul>
 <h2 id="want-to-know-more">Want to know more?</h2>
 <p>You can see the current and past versions using one of the following:</p>
