Website generation with Couscous

--- a/changelog.html
+++ b/changelog.html
@@ -41,13 +41,18 @@
                                     </a>
                                 </li>
                                                             <li class="">
-                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/01-introduction.html">
-                                        Introduction
+                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/01-installation.html">
+                                        Installation
                                     </a>
                                 </li>
                                                             <li class="">
                                     <a href="http://gnugat.github.io/micro-framework-bundle/doc/02-compatibility.html">
                                         Compatibility
+                                    </a>
+                                </li>
+                                                            <li class="">
+                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/03-benchmark.html">
+                                        Benchmark
                                     </a>
                                 </li>
                                                     </ul>
@@ -57,6 +62,11 @@
                 
                 <section id="content" class="col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10">
                     <h1 id="changelog">CHANGELOG</h1>
+<h2 id="030-console">0.3.0: Console</h2>
+<ul>
+<li>added support for <code>console.command</code> tag</li>
+<li>added <code>KernelApplication</code></li>
+</ul>
 <h2 id="020-supported-bundles">0.2.0: Supported Bundles</h2>
 <ul>
 <li>added support for <code>league/tactician-bundle</code></li>
