--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,11 @@
                 
                 <section id="content" class="col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10">
                     <h1 id="changelog">CHANGELOG</h1>
+<h2 id="050-cache-clear-amp-warmup">0.5.0: Cache clear &amp; warmup</h2>
+<ul>
+<li>added <code>cache:warmup</code> command</li>
+<li>added <code>cache:clear</code> command</li>
+</ul>
 <h2 id="040-commands">0.4.0: Commands</h2>
 <ul>
 <li>added support for <code>ContainerAwareCommand</code></li>
