--- a/versioning.html
+++ b/versioning.html
@@ -81,9 +81,9 @@ API of this project.</p>
 <a href="https://gist.github.com/jbenet/ee6c9ac48068889b0912">simple git branching model</a>:</p>
 <blockquote>
 <ol>
-<li><code>master</code> must always be deployable.</li>
+<li><code>main</code> must always be deployable.</li>
 <li><strong>all changes</strong> are made through feature branches (pull-request + merge)</li>
-<li>rebase to avoid/resolve conflicts; merge in to <code>master</code></li>
+<li>rebase to avoid/resolve conflicts; merge in to <code>main</code></li>
 </ol>
 </blockquote>
                 </section>
