--- a/contributing.html
+++ b/contributing.html
@@ -86,11 +86,11 @@ run the PHPUnit test suite.</p>
 using the following command:</p>
 <pre><code>git remote add upstream https://github.com/gnugat/micro-framework-bundle.git</code></pre>
 <p>Then get the upstream changes:</p>
-<pre><code>git checkout master
-git pull --rebase origin master
-git pull --rebase upstream master
+<pre><code>git checkout main
+git pull --rebase origin main
+git pull --rebase upstream main
 git checkout &lt;your-branch&gt;
-git rebase master</code></pre>
+git rebase main</code></pre>
 <p>Finally, publish your changes:</p>
 <pre><code>git push -f origin &lt;your-branch&gt;</code></pre>
 <p>Your pull request will be automatically updated.</p>
