--- a/changelog.html
+++ b/changelog.html
@@ -51,7 +51,7 @@
                                     </a>
                                 </li>
                                                             <li class="">
-                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/03-benchmark.html">
+                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/11-benchmark-2024.html">
                                         Benchmark
                                     </a>
                                 </li>
@@ -62,6 +62,37 @@
                 
                 <section id="content" class="col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10">
                     <h1 id="changelog">CHANGELOG</h1>
+<h2 id="093-fixed-missing-logger">0.9.3: fixed missing logger</h2>
+<ul>
+<li>removed <code>ContainerControllerResolver</code>'s dependency on <code>@logger</code>
+(we don't have a logger set up, by default)</li>
+</ul>
+<h2 id="092-autowiring">0.9.2: autowiring</h2>
+<ul>
+<li>added support for autowiring (including Controller as autowired services)</li>
+</ul>
+<h2 id="091-routing-attributes">0.9.1: routing attributes</h2>
+<ul>
+<li>added support for routing attributes (<code>#[Route()]</code>)</li>
+</ul>
+<h2 id="090-symfony-7-support">0.9.0: Symfony 7 support</h2>
+<ul>
+<li>
+<p>Upgraded support to Symfony 6</p>
+</li>
+<li>
+<p>Upgraded support to PHP 8.2 (accordingly with Symfony 7)</p>
+</li>
+<li>
+<p>Upgraded tests to PHPUnit 11</p>
+</li>
+<li>
+<p>Removed ExitCode (use Symfony\Component\Console\Command constants instead)</p>
+</li>
+<li>
+<p>Removed support for <code>ContainerAwareCommand</code>, as it's been removed from Symfony 7</p>
+</li>
+</ul>
 <h2 id="080-symfony-6-support">0.8.0: Symfony 6 support</h2>
 <ul>
 <li>Upgraded support to Symfony 6</li>
