Website generation with Couscous

--- a/changelog.html
+++ b/changelog.html
@@ -55,6 +55,11 @@
                                         Benchmark
                                     </a>
                                 </li>
+                                                            <li class="">
+                                    <a href="http://gnugat.github.io/micro-framework-bundle/doc/20-incompatibility.html">
+                                        Incompatibility
+                                    </a>
+                                </li>
                                                     </ul>
 
                     </nav>
@@ -62,6 +67,10 @@
                 
                 <section id="content" class="col-sm-offset-3 col-lg-offset-2 col-sm-9 col-lg-10">
                     <h1 id="changelog">CHANGELOG</h1>
+<h2 id="094-dropped-controller-methord-arguments">09.4: dropped controller methord arguments</h2>
+<ul>
+<li>controller methods now can only receive a Request argument</li>
+</ul>
 <h2 id="093-fixed-missing-logger">0.9.3: fixed missing logger</h2>
 <ul>
 <li>removed <code>ContainerControllerResolver</code>'s dependency on <code>@logger</code>
